# lme

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  lme.toml  lme.toml.example
src/: config.rs  download.rs  error.rs  lib.rs  main.rs
src/context/: packer.rs
src/decay/: formula.rs  mod.rs  prune.rs
src/embedder/: cosine.rs  mod.rs  onnx.rs  tokenize.rs
src/guardrails/: conflict.rs  dedup.rs  mod.rs  sensitivity.rs  source_ref.rs  verify.rs
src/server/: mod.rs  protocol.rs  transport.rs
src/server/tools/: context.rs  mod.rs  recall.rs  search.rs  status.rs  store.rs
src/storage/: crud.rs  migrations.rs  mod.rs  models.rs  search.rs
tests/: config_test.rs  mcp_integration_test.rs  storage_test.rs
